external-crates/move/crates/move-prover/tests/snapshots/simple-compile-error.move.snap
---
source: crates/move-prover/tests/integration.rs
expression: output
snapshot_kind: text
---
Verification failed: exiting with model building errors
error: unexpected token
  ┌─ tests/inputs/simple-compile-error.move:5:1
  │
4 │   assert!(true
  │          - To match this '('
5 │ 
  │ ^ Expected ')'
